--- a/bigbluebutton-html5/imports/ui/stylesheets/variables/palette.scss
+++ b/bigbluebutton-html5/imports/ui/stylesheets/variables/palette.scss
@@ -9,6 +9,7 @@
   --color-gray-darkest: #111111;
   --color-gray-lighter: #a7b3bd;
   --color-gray-lightest: #d4d9df;
+  --color-gray-separator: #F2F2F2;
 
   --color-blue-light: #54a1f3;
   --color-blue-lighter: #92BCEA;
